Jenkins updated